--- a/log-check/playbook-log-check.yml
+++ b/log-check/playbook-log-check.yml
@@ -9,6 +9,6 @@
    check_mail_username: "2727250655@qq.com"
    check_mail_password: "xykvqvunpmuidfff"
    check_mail_to: ["dt@dyclub.org"]
-   playbook_name: "playbook-log-check.yml"
+   check_playbook_name: "playbook-log-check.yml"
   roles:
    - os-check
