修改log_check的邮件展示样式

--- a/os-check/defaults/main.yaml
+++ b/os-check/defaults/main.yaml
@@ -9,10 +9,6 @@ check_mail_port: ""
 check_mail_username: ""
 check_mail_password: ""
 check_mail_to: []
-#check_mail_subject: "System Check Report [{{ check_day }}]"
-
-###################### 邮件标题 ######################
-# [P2][OK][dy223 192.168.31.223][][send_mail_natapp.py][2022-05-11 17:00:01]
 check_playbook_name: ""
 check_day_mail: "{{ '%Y-%m-%d %H:%M:%S' | strftime }}"
-check_mail_subject: "[P0][OK][DY223 192.168.31.223][][{{ check_playbook_name }}] [{{ check_day_mail }}]"
+check_mail_subject: "[P0][OK][dy223 192.168.31.223][][{{ check_playbook_name }}] [{{ check_day_mail }}]"
