--- a/os-check/playbook-os-check.yml
+++ b/os-check/playbook-os-check.yml
@@ -12,8 +12,8 @@
    check_mail_host: "smtp.qq.com"
    check_mail_port: "465"
    check_mail_username: "2727250655@qq.com"
-   check_mail_password: "xykvqvunpmuidfff"
+   check_mail_password: "xykvqvu------"
    check_mail_to: ["dt@dyclub.org"]
-   check_playbook_name: "playbook-log-check.yml"
+   check_playbook_name: "playbook-os-check.yml"
   roles:
-   - log-check
+   - os-check
