--- a/ssh-check/tasks/main.yaml
+++ b/ssh-check/tasks/main.yaml
@@ -2,18 +2,18 @@
 # author: dingtong
 
 - name: Get log check data.
-  script: check_log.sh
-  register: check_result  # register: check_linux.sh 命令执行的结果返回给 check_result, 通过变量{{ item }}调用
+  script: check_ssh.sh
+  register: check_result  # register: check_ssh.sh 命令执行的结果返回给 check_result, 通过变量{{ item }}调用
 
 - block:  # block 模块: 将多个任务组合成一个块，并且可以对这个块做条件判断，以及当块里面的任务失败时，进行失败处理。
   - name: Generate report file.
     template:
-      src: log-report.html
-      dest: "{{ check_report_path | d('/tmp') }}/log-check-report{{ check_report_file_suffix | d('') }}.html"
+      src: ssh-report.html
+      dest: "{{ check_report_path | d('/tmp') }}/ssh-report{{ check_report_file_suffix | d('') }}.html"
 
   - name: Get report file content.
     slurp:  # slurp 模块用于拉取远端文件的 base64 码
-      src: "{{ check_report_path | d('/tmp') }}/log-check-report{{ check_report_file_suffix | d('') }}.html"
+      src: "{{ check_report_path | d('/tmp') }}/ssh-report{{ check_report_file_suffix | d('') }}.html"
     register: report_data
 
   - name: Send a report by email.
